--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "supertest": "^6.3.3",
     "@testing-library/react": "^14.1.0",
     "@testing-library/jest-dom": "^6.1.4",
-    "playwright": "^1.40.0"
+    "playwright": "^1.40.0",
+    "mongoose": "^8.0.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "express-validator": "^7.0.1",
+    "socket.io": "^4.6.0",
+    "nodemailer": "^6.9.7"
   },
   "engines": {
     "node": ">=18.0.0"
